added js file and data.json file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index.html
+<!DOCTYPE html>
+<html ng-app='testApp'>
+<body ng-controller="PromiseCtrl" >
+
+ <button ng-click="getRecords()" >Successful Call</button>
+ <button ng-click="getRecordsWithError()" >Bad Error-filled Call</button>
+
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script type="text/javascript" src="app.js"> </script>
+
+</body>
+</html>
+
