--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html ng-app='testApp'>
+<head>
+	<title>Js Promise Example</title>
+</head>
 <body ng-controller="PromiseCtrl" >
 
  <button ng-click="getRecords()" >Successful Call</button>
